# IRIXmountedcameras

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: example_gym.yaml
docs/: API_SPEC.md  ARCHITECTURE.md  BACKEND_API.md  CAMERA_SYSTEM.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  PRODUCT_SPEC.md  RESEARCH_LOG.md  ROADMAP.md  SENSOR_FUSION.md  SYSTEM_ARCHITECTURE.md  TODO.md  TRACKING.md  VALIDATION.md  WRISTBAND_SYSTEM.md
irix/: __init__.py
irix/backend/: studio_api.py
irix/barbell/: __init__.py  calibration.py  detector.py  rpe.py  tracker.py
tests/: test_band_placement.py  test_barbell_calibration.py  test_barbell_detector.py  test_barbell_rpe.py  test_barbell_tracker.py  test_benchmarks.py  test_camera_calibration.py  test_camera_source.py  test_checkout.py  test_clock_sync.py  test_config_driven_live_pipeline.py  test_confirmation.py  test_demo_smoke.py  test_disambiguation.py  test_disambiguation_continuity.py  test_exercise_recognition.py  test_fatigue.py  test_form_scoring.py  test_fusion.py  test_gemini_vlm_backend.py  test_gym_config.py  test_gym_runner.py  test_identity.py  test_identity_resolution.py  test_imu_calibration.py  test_imu_io.py  test_imu_rep_counting.py  test_imu_stream.py  test_motion_correlation.py  test_multiview.py  test_pipeline.py  test_plate_color_check.py  test_plate_geometry_check.py  test_pose_estimator_integration.py  test_pose_tracker.py  test_rep_counting.py  test_rep_fusion.py  test_rep_session_camera_calibration.py  test_rep_session_clock_sync.py  test_rep_session_color_plate_weight.py  (+19 more)
(+75 files in other folders)
