[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "irix"
version = "0.1.0"
description = "IRIX camera-based rep tracking system - software scaffold"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
pose = ["ultralytics>=8.1"]
qr = ["pyzbar>=0.1.9"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
include = ["irix*"]
